fix:  mypage処理の冗長化に伴う別ファイル化

--- a/mypage/index.html
+++ b/mypage/index.html
@@ -95,324 +95,7 @@
             <div id="answer-list" class="content-list"></div>
         </section>
     </main>
-    <script type="module">
-        import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
-
-        const supabase = createClient(
-            "https://mgsbwkidyxmicbacqeeh.supabase.co",
-            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1nc2J3a2lkeXhtaWNiYWNxZWVoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk5NDA0MjIsImV4cCI6MjA1NTUxNjQyMn0.fNkFQykD9ezBirtJM_fOB7XEIlGU1ZFoejCgrYObElg"
-        );
-
-        let isLoading = true;
-
-        document.addEventListener("DOMContentLoaded", async () => {
-            await new Promise(resolve => {
-                showCustomAlert("読み込み中です", false);
-                resolve();
-            });
-        });
-
-        // Googleログインしているユーザーを取得
-        const { data: { user } } = await supabase.auth.getUser();
-        if (!user) {
-            showCustomAlert("ログインしてください", false);
-        }
-
-        const userEmail = user.email;
-
-        // --- ユーザー情報を取得・更新 ---
-        const { data: existingUser, error: userError } = await supabase
-            .from("users")
-            .select("*")
-            .eq("user_email", userEmail)
-            .single();
-
-        if (!existingUser) {
-            // 新規ユーザーなら登録
-            await supabase.from("users").insert([{ user_id: user.id, user_email: userEmail, visit_count: 1, avatar_url: user.user_metadata.avatar_url, full_name: user.user_metadata.full_name }]);
-        } else {
-            await supabase
-                .from("users")
-                .update({ avatar_url: user.user_metadata.avatar_url, full_name: user.user_metadata.full_name })
-                .eq("user_email", userEmail);
-        }
-
-        // 最新ユーザーデータ再取得
-        const { data: updatedUser } = await supabase
-            .from("users")
-            .select("*")
-            .eq("user_email", userEmail)
-            .single();
-
-        document.title = `${updatedUser.display_name || "とある水戸一の名無し"} のマイページ | 水戸一高附属中総合ウェブサイト`;
-
-        const logoutBtn = document.getElementById("logout-button");
-
-        // --- ログアウト ---
-        logoutBtn.addEventListener("click", async () => {
-            const { error } = await supabase.auth.signOut();
-            if (error) {
-                console.error(error);
-                showCustomNotification("ログアウトに失敗しました。");
-                return;
-            }
-            showCustomNotification("ログアウトしました。");
-            window.location.href = "../";
-        });
-
-        // --- 学籍番号取得 ---
-        fetch("/mito1-website/private/names.json")
-            .then(response => response.json())
-            .then(data => {
-                const classes = Object.keys(data);
-                let studentId = "0A0000";
-
-                for (const cls of classes) {
-                    const index = data[cls].indexOf(user.user_metadata.full_name);
-                    console.log("Checking class:", cls, "Index:", index);
-                    console.log(updatedUser.user_name);
-                    if (index !== -1) {
-                        const classCode = cls;
-                        const attendanceNumber = (index + 1).toString().padStart(2, '0');
-                        studentId = classCode + attendanceNumber;
-                        console.log("Found student ID:", studentId);
-                        break;
-                    }
-                }
-
-                document.getElementById("student-id").textContent = studentId;
-            })
-            .catch(error => {
-                console.error("Error fetching names.json:", error);
-            });
-
-        let disprole;
-        switch (updatedUser.role) {
-            case "master":
-                disprole = "マスター";
-                break;
-            case "admin":
-                disprole = "管理者";
-                break;
-            case "manager":
-                disprole = "コンテンツ管理者";
-                break;
-            case "request_music_manager":
-                disprole = "リクエスト曲管理者";
-                break;
-            default:
-                disprole = "通常ユーザー";
-                break;
-        }
-
-        document.getElementById("user-avatar").src = user.user_metadata.avatar_url || "../img/default-avatar.png";
-        document.getElementById("user-name").textContent = user.user_metadata.full_name || "ゲスト";
-        document.getElementById("user-email").textContent = textMosaic(userEmail);
-        document.getElementById("display-name").textContent = updatedUser.display_name || "とある水戸一の名無し";
-        document.getElementById("user-role").textContent = disprole;
-        document.getElementById("visit-count").textContent = updatedUser.visit_count;
-        document.getElementById("my-page-link").href = `./other/?user_id=${encodeURIComponent(updatedUser.user_id)}`;
-        document.getElementById("about-me").textContent = updatedUser.about_me || "自己紹介は未設定です。";
-
-        document.getElementById("user-role").addEventListener("click", () => {
-            if (!(updatedUser.role === "")) {
-                window.location.href = "../admin/";
-            }
-        });
-
-        // --- 質問一覧を取得 ---
-        const { data: questions } = await supabase
-            .from("questions")
-            .select("id, title")
-            .eq("user_email", userEmail)
-            .order("created_at", { ascending: false });
-
-        const qList = document.getElementById("question-list");
-        if (questions.length === 0) qList.innerHTML = "<p>投稿した質問はありません</p>"
-        questions?.forEach(q => {
-            const div = document.createElement("div");
-            div.classList.add("content-list-item");
-            const a = document.createElement("a");
-            a.href = `/mito1-website/question/details/?id=${q.id}`;
-            a.style.color = "inherit";
-            const title = document.createElement("h3");
-            title.textContent = q.title;
-            a.appendChild(title);
-            const time = document.createElement("p");
-            time.innerHTML = `<i class="fa-solid fa-clock"></i>${new Date(q.created_at).toLocaleString()}`;
-            a.appendChild(time);
-            const username = document.createElement("p");
-            username.innerHTML = `<i class="fa-solid fa-user"></i>あなた`;
-            a.appendChild(username);
-            div.appendChild(a);
-            qList.appendChild(div);
-        });
-
-        // --- 掲示板の投稿一覧を取得 ---
-        const { data: threads } = await supabase
-            .from("BBS")
-            .select("id, thread, created_at, username, content")
-            .eq("user_email", userEmail)
-            .order("created_at", { ascending: false });
-
-        const tList = document.getElementById("thread-list");
-        if (threads.length === 0) tList.innerHTML = "<p>掲示板への投稿はありません</p>"
-        threads?.forEach(t => {
-            const div = document.createElement("div");
-            div.classList.add("content-list-item");
-            const a = document.createElement("a");
-            a.href = `/mito1-website/bbs/thread/?thread=${encodeURIComponent(t.thread)}&post_id=${encodeURIComponent(t.id)}`;
-            a.style.color = "inherit";
-            const title = document.createElement("h3");
-            const plainContent = t.content.split("<br>")[0].replace(/<[^>]*>/g, "");
-            title.textContent = plainContent.slice(0, 20) + (plainContent.length > 20 ? "..." : "");
-            a.appendChild(title);
-            const time = document.createElement("p");
-            time.innerHTML = `<i class="fa-solid fa-clock"></i>${new Date(t.created_at).toLocaleString()}`;
-            a.appendChild(time);
-            const username = document.createElement("p");
-            username.innerHTML = `<i class="fa-solid fa-user"></i>あなた`;
-            a.appendChild(username);
-            div.appendChild(a);
-            tList.appendChild(div);
-        });
-
-        // --- 回答一覧を取得 ---
-        const { data: answers } = await supabase
-            .from("answers")
-            .select("id, question_id, content, created_at, username")
-            .eq("user_email", userEmail)
-            .order("created_at", { ascending: false });
-
-        const aList = document.getElementById("answer-list");
-        if (answers.length === 0) aList.innerHTML = "<p>投稿した回答はありません</p>"
-        answers?.forEach(a => {
-            const div = document.createElement("div");
-            div.classList.add("content-list-item");
-            const aTag = document.createElement("a");
-            aTag.href = `/mito1-website/question/details/?id=${a.question_id}&answer_id=${a.id}`;
-            aTag.style.color = "inherit";
-            const content = document.createElement("h3");
-            content.textContent = a.content.slice(0, 20) + (a.content.length > 20 ? "..." : "");
-            aTag.appendChild(content);
-            const time = document.createElement("p");
-            time.innerHTML = `<i class="fa-solid fa-clock"></i>${new Date(a.created_at).toLocaleString()}`;
-            aTag.appendChild(time);
-            const username = document.createElement("p");
-            username.innerHTML = `<i class="fa-solid fa-user"></i>あなた`;
-            aTag.appendChild(username);
-            div.appendChild(aTag);
-            aList.appendChild(div);
-        });
-
-        const allPost = questions.length + answers.length + threads.length;
-        document.getElementById("post-count").textContent = allPost;
-
-        isLoading = false;
-        document.getElementById('custom-alert').remove();
-
-        document.getElementById("edit-display-name").addEventListener("click", async () => {
-            let newDisplayName = prompt("新しい表示名を入力してください（20文字以内）:");
-            if (newDisplayName === null) return;
-
-            newDisplayName = newDisplayName.trim();
-
-            // 空白の場合はデフォルト名
-            if (!newDisplayName) {
-                newDisplayName = "とある水戸一の名無し";
-            }
-
-            if (newDisplayName.length > 20) {
-                showCustomNotification("表示名は20文字以内で入力してください。");
-                return;
-            }
-
-            const { data: existingNames } = await supabase
-                .from("users")
-                .select("display_name")
-                .eq("display_name", newDisplayName)
-                .neq("user_email", userEmail);
-
-            if (existingNames.length > 0) {
-                showCustomNotification("その表示名は既に使用されています。");
-                return;
-            }
-
-            // users テーブル更新
-            const { error: userUpdateErr } = await supabase
-                .from("users")
-                .update({ display_name: newDisplayName })
-                .eq("user_email", userEmail);
-
-            if (userUpdateErr) {
-                console.error(userUpdateErr);
-                showCustomNotification("表示名の更新に失敗しました。");
-                return;
-            }
-
-            // BBS 更新（username が null / 空文字のケースも含め確実に更新）
-            const { error: bbsErr } = await supabase
-                .from("BBS")
-                .update({ username: newDisplayName })
-                .eq("user_email", userEmail);
-
-            if (bbsErr) {
-                console.error(bbsErr);
-                showCustomNotification("BBSの表示名更新に失敗しました。");
-                return;
-            }
-
-            // questions 更新
-            const { error: qErr } = await supabase
-                .from("questions")
-                .update({ username: newDisplayName })
-                .eq("user_email", userEmail);
-
-            if (qErr) {
-                console.error(qErr);
-                showCustomNotification("質問の表示名更新に失敗しました。");
-                return;
-            }
-
-            // answers 更新
-            const { error: aErr } = await supabase
-                .from("answers")
-                .update({ username: newDisplayName })
-                .eq("user_email", userEmail);
-
-            if (aErr) {
-                console.error(aErr);
-                showCustomNotification("回答の表示名更新に失敗しました。");
-                return;
-            }
-
-            // 画面反映
-            document.getElementById("display-name").textContent = newDisplayName;
-            showCustomNotification("表示名を更新しました。");
-        });
-
-        document.getElementById("edit-about-me").addEventListener("click", () => {
-            let newAboutMe = prompt("新しい自己紹介を入力してください（100文字以内）:");
-            if (newAboutMe === null) return;
-            newAboutMe = newAboutMe.trim();
-            if (newAboutMe.length <= 100) {
-                supabase
-                    .from("users")
-                    .update({ about_me: newAboutMe })
-                    .eq("user_email", userEmail)
-                    .then(() => {
-                        document.getElementById("about-me").textContent = newAboutMe || "自己紹介は未設定です。";
-                        showCustomNotification("自己紹介を更新しました。");
-                    });
-            } else {
-                showCustomNotification("無効な自己紹介です。100文字以内で入力してください。");
-            }
-        })
-
-        function textMosaic(str) {
-            return str.slice(0, 5) + "*".repeat(10) + str.slice(-5);
-        }
-    </script>
+    <script type="module" src="js/main.js"></script>
     <script type="module" src="../script/notice/notice.js"></script>
     <script src="../script/customAlert.js" type="module"></script>
     <script type="module" src="../script/restriction.js"></script>
