--- a/mypage/index.html
+++ b/mypage/index.html
@@ -18,6 +18,10 @@
             border-radius: 50%;
             margin: 0 0 0 1.5rem;
         }
+
+        #user-role {
+            cursor: pointer;
+        }
     </style>
     <!--web情報-->
     <meta name="keywords" content="水戸一, 水戸一附属, 水戸一附属中, 一学年,">
