--- a/question/details/index.html
+++ b/question/details/index.html
@@ -187,10 +187,20 @@
             }
 
             document.querySelectorAll(".username").forEach((element) => {
-                element.style.cursor = 'pointer';
-                element.addEventListener("click", () => {
+                element.style.cursor = "alias";
+                element.title = "ユーザーページを表示";
+
+                element.addEventListener("click", (e) => {
+                    e.preventDefault();
+                    e.stopPropagation();
+
                     const userId = element.getAttribute("data-user-id");
-                    window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}&redirect_url=/mito1-website/question/details/?id=${encodeURIComponent(questionId)}`;
+                    const url = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}&redirect_url=/mito1-website/bbs/`;
+
+                    const w = window.open(url, "_blank");
+                    if (w) {
+                        w.opener = null;
+                    }
                 });
             });
         }
@@ -279,13 +289,21 @@
 
         fetchQuestion();
 
-        document.addEventListener("DOMContentLoaded", () => {
-            document.querySelectorAll(".username").forEach((element) => {
-                element.style.cursor = 'pointer';
-                element.addEventListener("click", () => {
-                    const userId = element.getAttribute("data-user-id");
-                    window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}&redirect_url=/mito1-website/question/details/?id=${encodeURIComponent(questionId)}`;
-                });
+        document.querySelectorAll(".username").forEach((element) => {
+            element.style.cursor = "alias";
+            element.title = "ユーザーページを表示";
+
+            element.addEventListener("click", (e) => {
+                e.preventDefault();
+                e.stopPropagation();
+
+                const userId = element.getAttribute("data-user-id");
+                const url = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}&redirect_url=/mito1-website/bbs/`;
+
+                const w = window.open(url, "_blank");
+                if (w) {
+                    w.opener = null;
+                }
             });
         });
 
